# DataCatalog-Management

./: .env.example  .gitignore  README.md  pyproject.toml
scripts/: init_db.py
src/: __init__.py  config.py  main.py
src/api/: __init__.py  app.py
src/api/routes/: __init__.py  ai_analysis.py  business_objects.py  rules.py  search.py
src/crews/: __init__.py  agents.py  crew.py  tasks.py
src/db/: __init__.py  neo4j_client.py
src/models/: __init__.py  base.py  business_object.py  data_element.py  domain.py  rule.py
src/repositories/: __init__.py  business_object_repo.py
src/services/: __init__.py  embedding_service.py  search_service.py
src/utils/: __init__.py  errors.py  logging.py
streamlit/: __init__.py
streamlit_app/: __init__.py
