[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "data-catalog-manager"
version = "0.1.0"
description = "A data catalog management system with similarity search capabilities"
readme = "README.md"
requires-python = ">=3.10"
authors = [
    {name = "Data Management Team"}
]
dependencies = [
    "neo4j==5.14.0",
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.4.2",
    "pydantic-settings==2.0.3",
    "python-dotenv==1.0.0",
    "crewai==0.28.0",
    "langchain==0.0.325",
    "sentence-transformers==2.2.2",
    "openai==1.3.0",
    "typer==0.9.0",
    "loguru==0.7.2",
    "numpy==1.24.3",
    "tenacity==8.2.3"
]

[project.optional-dependencies]
dev = [
    "pytest==7.4.2",
    "pytest-cov==4.1.0",
    "black==23.9.1",
    "isort==5.12.0",
    "flake8==6.1.0",
    "mypy==1.5.1",
    "pre-commit==3.4.0"
]

[tool.black]
line-length = 88
target-version = ["py310"]

[tool.isort]
profile = "black"
line_length = 88

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"